Alteração do icone do site

--- a/sobre.html
+++ b/sobre.html
@@ -9,15 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/ico.png">
+
 
 </head>
 
-
 <header>
-    
-        <div id="topbar">
+
+    <div id="topbar">
         <img src="img/logo1.png" id=toplogo>
-        </div>
+    </div>
 
     <nav>
         <ul>
@@ -30,15 +31,15 @@
 <body id="bodysobre">
 
     <div id="box" style=background-color:fefefe>
-    <div id="sobretext">
-    <h1>Criado por Gabriel Vale!</h1>
-    <h2 style=margin-top:1em>Contato:</h2>
-    </div>
-    <div id=icons>
-        <a href="https://github.com/gabriel1vale"> <img src="img/github.png" ></a>
-        <a href="https://www.linkedin.com/in/gabriel1vale/"> <img src="img/linkedin.png" ></a>
-    </div>
-    
+        <div id="sobretext">
+            <h1>Criado por Gabriel Vale!</h1>
+            <h2 style=margin-top:1em>Contato:</h2>
+        </div>
+        <div id=icons>
+            <a href="https://github.com/gabriel1vale"> <img src="img/github.png"></a>
+            <a href="https://www.linkedin.com/in/gabriel1vale/"> <img src="img/linkedin.png"></a>
+        </div>
+
 </body>
 
 </html>
