--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/ico.png">
+
 
 </head>
 
-
 <header>
-    
-        <div id="topbar">
+
+    <div id="topbar">
         <img src="img/logo1.png" id=toplogo>
-        </div>
+    </div>
 
     <nav>
         <ul>
